# Pico_Alt_Comm_Protocol

./: CMakeLists.txt  README.md
Python_Encoder_Decoder/: main.py  pico_com.py
src/: ADC.c  ADC.h  AWG.c  AWG.h  Analyzer.c  Analyzer.h  Communication.c  Communication.h  DAC.c  DAC.h  Error.c  Error.h  Globals.h  LIA.c  LIA.h  Main.c  Main.h  Scope.c  Scope.h  Settings.c  Settings.h
src/kiss_fft/: _kiss_fft_guts.h  kiss_fftr.c
